Добавил блок с описанием структуры проекта

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -3,7 +3,7 @@
 <head>
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <link rel="stylesheet" href="./css/main.css"> <!--Подключаем стили относительно конечной папки docs или build-->
+   <link rel="stylesheet" href="./css/main.css"> <!--Подключаем стили относительно конечной папки docs-->
    <title>main page</title>
 </head>
 <body>
@@ -20,7 +20,7 @@
 
 	</div>
 
-   <!-- Скрипты подключать относительно конечной папки build. При подключении скрипта на новой странице добавляем путь к скрипту в файл webpack.config.js (если удаляем скрипт не забываем удалить путь к скрипту из webpack) -->
+   <!-- Скрипты подключать относительно конечной папки docs. При подключении скрипта на новой странице добавляем путь к скрипту в файл webpack.config.js (если удаляем скрипт не забываем удалить путь к скрипту из webpack) -->
    <!-- <script src="./js/index.bundle.js"></script> -->
 </body>
 </html>
